<resources>
    <string name="app_name">Tashkent travel</string>
    <string name="object_name">object name</string>
    <string name="address">address</string>
    <string name="information">information</string>
    <string name="location"><u>Location</u></string>
    <string name="phone"><u>Phone</u></string>
    <string name="work_time">work_time</string>
    <string name="name_mosque_khazrati_imam">Mosque Khazrati Imam</string>
    <string name="name_mosque_sheikh_zayniddin">Mosque Sheikh Zayniddin</string>
    <string name="name_mosque_minor">Mosque Minor</string>
    <string name="name_mosque_islam_ota">Mosque Islam Ota</string>
    <string name="name_mosque_shekh_muhammadsodik">Mosque Sheikh Muhammad Sadyk Muhammad Yusuf</string>
    <string name="name_hotel_hyatt_regency">Hyatt Regency Hotel</string>
    <string name="name_hotel_hilton">Hilton Tashkent City Hotel</string>
    <string name="name_hotel_ichan_qala">Ichan Qal\'a Premium Class Hotel</string>
    <string name="name_hotel_wyndham">Wyndham Tashkent Hotel</string>
    <string name="name_hotel_city_palace">City Palace Hotel Tashkent</string>
    <string name="name_shopping_samarkand_darvoza">Mall Samarkand Darvoza</string>
    <string name="name_shopping_chorsu_bazaar">Chorsu Bazaar</string>
    <string name="name_shopping_yangiabad">Yangiobod Weekend Flea Market</string>
    <string name="name_shopping_next">Next Mall</string>
    <string name="name_shopping_megaplanet">Mega Planet</string>
    <string name="name_museums_nature">State Museum of Nature of Uzbekistan</string>
    <string name="name_museums_zoo">Tashkent Zoo</string>
    <string name="name_museums_victory">Victory Park</string>
    <string name="name_museums_temurids">Amir Timur Museum</string>
    <string name="name_museums_railways">Railway Museum</string>
    <string name="info_mosque_khazrati_imam">Thoroughly restored in 2007, the historic buildings of
        the complex, with the earliest of them dating back to the 16th century, show their original
        splendor now. The new mosque featuring traditional Islamic architectural elements adds to
        the grandeur of the site.</string>
    <string name="info_mosque_sheikh_zayniddin">\"Sheyh Zayniddin\" Jami mosque and mausoleum widely
        known in Tashkent as \"Kukcha\" mosque is located in Mannon Uygur street 378, in a small Tashkent
        district known among locals as Kukcha. \"Sheyh Zayniddin\" mosque and the cemetery next to it
        have 700 years history. \nAccording to history professor Omonulla Fayzullaev, Sheyh Zayniddin\'s
        full name is nothing less than \"Sheyh Zayniddin Koyi Orifoni Toshkandi ibn Sheyh Shahobiddin
        Abu Hafs Umar Suhravardi\". He was born in 1164 and died in 1259 when he was 95 years old
        (The exact date of his birth is unknown).</string>
    <string name="info_mosque_minor">Minor mosque - a new architectural complex in Tashkent - the
        capital of Uzbekistan, located on the banks of the canal Anhor, embankment of which in recent
        months has undergone significant changes in terms of improvement.\nThe mosque is designed for
        more than 2,400 people. After opening it has become one of the largest spiritual centers of
        Muslims of Tashkent and Uzbekistan. Its construction was financed by the state budget and the
        Spiritual Administration of Muslims in Uzbekistan.\nThe mosque has all the facilities and
        amenities for the parishioners. There are special rooms for washing, which are equipped with
        all necessary facilities.</string>
    <string name="info_mosque_islam_ota">Islom Ota Mosque is one of the most beautiful mosques in
        Tashkent. It was founded in 2016, but the mosque itself has been around for many years.
        Previously, it was called \"Jurabek\" and in 2015 the mosque suffered from a fire, after which
        reconstruction work was carried out. The Islom Ota Mosque, named after the first President
        of Uzbekistan Islam Karimov, appeared on the site of the old mosque, and the territory of
        the complex has doubled and today can accommodate up to 10 thousand people. There is also
        a library that contains rare editions and original manuscripts. The mosque was built in the
        best traditions of eastern mosques: the complex is decorated with a huge blue dome, a high
        minaret and four small minarets at its corners.</string>
    <string name="info_mosque_shekh_muhammadsodik">The mosque is located next to the \"Sugalli Ota\"
        pilgrimage site. Sheikh Muhammad Sadyk Muhammad Yusuf began its construction.\nOn the territory
        of more than 2 hectares, a complex has been built, which includes a conference hall, classrooms,
        a bathing room, a museum and other auxiliary premises. \nThe \"Sugalli Ota\" mausoleum has
        been restored, and the building of the mosque has been enlarged thanks to the attached iwan.</string>
    <string name="info_hotel_hyatt_regency">Hyatt Regency Tashkent offers bright, spacious guestrooms
        with floor-to-ceiling windows that are elegantly decorated with contemporary furniture and
        locally inspired artwork. Each guestroom has a generous workspace with ergonomic chair and
        charging station, and bathrooms feature a soothing walk-in rain shower with separate bathtub.
        Regency Club rooms and suites include access to the Regency Club Lounge on the sixth floor,
        serving complimentary evening cocktails and hors d\'oeuvres</string>
    <string name="info_hotel_hilton">Get the celebrity treatment with world-class service at Hilton
        Tashkent City\nLocated in Tashkent, Hilton Tashkent City has a bar and a terrace. Among the
        facilities of this property are a restaurant, indoor pool and a Pan-Asian rooftop restaurant
        with city views. The property offers a 24-hour front desk and room service, along with free WiFi
        throughout.\nAll rooms are equipped with air conditioning, minibar, free WiFi and flat-screen TV.
        A private bathroom comes with a separate walk-in rain shower and bath, hairdryer and slippers.
        Free toiletries are featured.</string>
    <string name="info_hotel_ichan_qala">The hotel\'s interior is decorated in Khiva style, in warm
        colors typical of the oriental style, using luxurious fabrics. Each room includes a flat-screen TV,
        refrigerator and a private bathroom with toiletries and hairdryer.The restaurant of the "Ichan Qala"
        hotel offers dishes of local Uzbek cuisine.\nIn addition, guests can visit the lounge bar and
        outdoor terrace, as well as a sauna, jacuzzi and billiards.</string>
    <string name="info_hotel_wyndham">Spacious and modern rooms and suits of the Wyndham Tashkent
        Hotel are perfect for both business and leisure. Such modern facilities as flat-panel high
        definition TVs and free high-speed Internet are available for you. The Hotel is located in
        the city center and is easy to approach by urban transport, and you can reach any place of
        the city, including such popular attractions like the Alay Bazaar, Museum of Timurids’
        History, Chor-su Bazaar and Khast Imam Square at whim.\nThere are two restaurants with
        delicious cuisine and banquet rooms for events such as weddings, corporate meetings,
        etc in the Hotel. A fitness center with indoor and outdoor pools and saunas are at guests
        disposal. Discover the beauty of Tashkent with us.</string>
    <string name="info_hotel_city_palace">City Palace Hotel Tashkent is 1640 feet from Emir Temur
        Square and Emir Timur Museum in the heart of Tashkent city center. Features include an outdoor
        pool, indoor pool, and free WiFi. A mini-bar, seating area, and refrigerator are provided in
        each room as well as a satellite TV. City Palace Hotel Tashkent extras include an electric kettle,
        towels, and linen. A restaurant is on site, and luggage storage is offered at reception for added
        convenience. Free parking is provided. Abdulla Kodiriy metro station is 1148 feet away.\nThe
        hotel is also 2 minutes from Pakhtakor Stadium, 6 minutes drive from Tashkent Botanical Garden,
        and 4.3 minutes from Tashkent International Airport.</string>
    <string name="info_shopping_samarkand_darvoza">Samarkand Darvoza is one of the upscale malls in
        Tashkent which caters to the shopping needs of the customers. This mall is a like a one-stop
        destination for all the necessary items one would want to buy during their visit to this place.
        This shopping mall is a great place to hang out with your gang of buddies in your free time.
        If you are crazy about buying some branded goods, then this mall offers you a good collection
        of items. You can shop from a wide collection of watches and branded clothes along with
        footwear and much more at this place. If you are tired of hopping from stall to the other in
        the mall, then you can visit the food, shopping court and savor some food to
        regain the lost energy. The mall also has a children\’s play area ideally designed with a variety
        of games to keep kids engaged.</string>
    <string name="info_shopping_chorsu_bazaar">Bazaar is the heart of every oriental city, the center
        of public life, breadwinner of the whole city. Since the dawn of time bazaars appeared on the
        intersections of trade roads, on big squares of cities. They played role of main places of the
        city, where merchants, traders and common people gathered to discuss important news, to know
        prices, to have a rest in cozy choykhana (Uzbek café) eating pilaf and drinking green tea.
        Also bazaars were the places of main entertaining events of the city – theatrical performances.
        \nTashkent Bazaar Chorsu, the age of which is more than hundred years, also was always located
        on the main square of the city Eski-Juva. Old bazaar constructions destroyed and went bad,
        but the traditional architecture remained unchanged – domed large premises. This was the only
        way to protect oneself from heat and dust in terms of hot and dry Asian climate.\nThe tendency
        of construction of such bazaars with a complex of covered premises began in XI century and
        went on up to XIII century. In our century this bazaar inherited land and premises of previous
        centuries. The modern trade complex is built with a glance of architectural features and traditions
        of urban development of previous epochs.</string>
    <string name="info_shopping_yangiabad">The flea market \"Yangiobod\" has been famous for its uniqueness
        and coloring for many years. Like all flea markets, the Yangiobod market literally \"boils\" on
        weekends and you can find absolutely everything here. Do you like computers or do you like to
        collect antique things? Or maybe you are looking for fishing equipment for fishing for a weekend
        or you dream about buying a cute little animal? Then you definitely should visit this storehouse
        of all kinds of goods.\nFlea market \"Yangiobod\" is a real collection of a wide variety of
        items and things absolutely for all tastes. Being in Tashkent, you must visit this market,
        where you can find anything you like, and at the same time walk in endless rows and penetrate
        the real life of the city.</string>
    <string name="mosques">Mosques</string>
    <string name="hotels">Hotels</string>
    <string name="shopping">Shopping</string>
    <string name="museums_amp_zoo"><![CDATA[Museums & Zoo]]></string>
</resources>